--- a/portfolioux.html
+++ b/portfolioux.html
@@ -15,7 +15,7 @@
             <nav class="uk-navbar-container" uk-navbar>
                 <div class="uk-navbar-left">
                     <ul class="uk-navbar-nav">
-                    <li class="uk-active alte-bold "><a href="index.html" class="inline uk-heading-primary"><img src="img/logo.png" alt="icono" class="icono"></a></li>
+                    <li class="uk-active alte-bold "><a href="index.html" class="inline uk-heading-primary"><img src="img/logo4.png" alt="icono" class="icono"></a></li>
                     </ul>
                 </div>
                   <div class="uk-navbar-right ">
