movi los archivos originales del portafolio a otra carpeta. Modifique el css  y html de portfolio y añadi una imagen nueva

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
                   <div class="uk-navbar-right ">
                           <ul class="uk-navbar-nav">
-                             <li class="uk-active"><a class="bar-menu" href="#Inicio">Home</a></li>
+                             <li class="uk-active"><a class="bar-menu" href="https://abrilurena.me/">Home</a></li>
                               <li class="uk-active"><a class="bar-menu" href="./portfolio.html" style="text-align: center;">Portfolio</a></li>
                           </ul>
                   </div>
