--- a/portfolio.html
+++ b/portfolio.html
@@ -15,111 +15,106 @@
             <nav class="uk-navbar-container" uk-navbar>
                 <div class="uk-navbar-left">
                     <ul class="uk-navbar-nav">
-                    <li class="uk-active alte-bold "><a href="index.html" class="inline uk-heading-primary"><img src="img/logo4.png" alt="icono" class="icono"></a></li>
+                        <li class="uk-active alte-bold ">
+                            <a href="https://abrilurena.me/" class="inline uk-heading-primary">
+                                <img src="img/logo4.png" alt="icono" class="icono">
+                            </a>
+                        </li>
                     </ul>
                 </div>
                   <div class="uk-navbar-right ">
                           <ul class="uk-navbar-nav">
-                             <li class="uk-active"><a class="bar-menu" href="./index.html">Home</a></li>
-                             <!-- <li class="uk-active"><a class="bar-menu" href="./curriculumvitae.html" style="text-align: center;">Curriculum Vitae</a></li>
-                              <li class="uk-active"><a class="bar-menu" href="./curriculumvitae.html" style="text-align: center;">Grades</a></li>-->
-                              <li class="uk-active"><a class="bar-menu" href="./portfolio.html" style="text-align: center;">Portfolio</a>
+                             <li class="uk-active">
+                                 <a class="bar-menu" href="https://abrilurena.me/">
+                                     Home
+                                </a>
+                            </li>
+                              <li class="uk-active">
+                                <a class="bar-menu" href="./portfolio.html" style="text-align: center;">
+                                    Portfolio
+                                </a>
                                 <div class="uk-navbar-dropdown">
                                     <ul class="uk-nav uk-navbar-dropdown-nav">
-                                        <li class="uk-active"><a href="./portfolioux.html">UX Researcher</a></li>
+                                        <li class="uk-active">
+                                            <a href="./portfolioux.html">UX Researcher</a>
+                                        </li>
                                         <li class="uk-nav-divider"></li>
-                                        <li class="uk-active"><a href="./uidesign.html">UI Designer</a></li>
+                                        <li class="uk-active">
+                                            <a href="./uidesign.html">UI Designer</a>
+                                        </li>
                                         <li class="uk-nav-divider"></li>
-                                        <li class="uk-active"><a href="./contentdesign.html">Content Designer</a></li>
+                                        <li class="uk-active">
+                                            <a href="./contentdesign.html">Content Designer</a>
+                                        </li>
                                         <li class="uk-nav-divider"></li>
-                                        <li class="uk-active"><a href="./portfoliofront.html">Front-end Developer</a></li>
+                                        <li class="uk-active">
+                                            <a href="./portfoliofront.html">Front-end Developer</a>
+                                        </li>
                                     </ul>
                                 </div>
                               </li>
-                              <!--<li class="uk-active"><a class="bar-menu" href="./others.html" style="text-align: center;">Other Projects</a></li> -->
                           </ul>
                   </div>
             </nav>
         </div>
-        <!--Seccion de background principal -->
         <div class="uk-child-width-1-1@s" uk-grid>
           <div>
-              <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" style="background-image: url(./img/portfolio.png);">
+            <h1 style=" text-align: center; margin-top: 2%;">UX Researcher</h1>
+            <!--bumble caso de estudio -->
+              <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
+                   style="background-image: url(./img/portfolio.png); margin: 50px;">
+                    <div class="uk-overlay-primary uk-position-cover uk-dark"></div>
+                   <a href="">
+                       <!--
+                        <div class="uk-overlay uk-position-center uk-light">
+                            <p class="alte-bold uk-h1">Bumble</p>
+                        </div>  -->
+                   </a>
+             </div>
+             <!-- exito-->
+             <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
+                   style="background-image: url(./img/portfolio.png); margin: 50px;">
+                    <div class="uk-overlay-primary uk-position-cover uk-dark"></div>
+                   <a href="">
+                       <!--
+                        <div class="uk-overlay uk-position-center uk-light">
+                            <p class="alte-bold uk-h1">Bumble</p>
+                        </div>  -->
+                   </a>
+             </div>
+             <!-- falabella vs ripley-->
+            <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
+             style="background-image: url(./img/portfolio.png); margin: 50px;">
                 <div class="uk-overlay-primary uk-position-cover uk-dark"></div>
-                <div class="uk-overlay uk-position-center uk-light">
-                    <p class="alte-bold uk-h1">Portfolio</p>
-                </div>  
+                <a href="">
+                    <!--
+                    <div class="uk-overlay uk-position-center uk-light">
+                        <p class="alte-bold uk-h1">Bumble</p>
+                    </div>  -->
+                </a>
             </div>
-          </div>
-        </div>
-        <!-----------------------------------------secciones del portafolio  ------------------------>
-        <div class="uk-child-width-1-2@m" style="padding: 2%" uk-grid>
-            <!--seccion de portafolio UX Researcher-->
-            <div>
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-media-top uk-animation-fade">
-                        <img src="./img/ux4.png" alt="">
-                    </div>
-                    <div class="uk-card-body">
-                        <h3 class="uk-card-title uk-link-text"><a href="./portfolioux.html" style="color: blue;" id="hi">UX Researcher</a></h3>
-                        <p>Some of the projects you will find are the following: <br>
-                            ->Heuristic evaluation of the Colombian online store Éxito.
-                            <br>
-                            ->Usability testing of the Bumble mobile application.
-                            <br>
-                            ->Summative study with unmoderated usability tests.
-                            <br>
-                            ->Project related to Citizen Experience.
-                        </p>
-                    </div>
+         <!-- citizen experience-->
+                <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
+                        style="background-image: url(./img/portfolio.png); margin: 50px;">
+                    <div class="uk-overlay-primary uk-position-cover uk-dark"></div>
+                    <a href="">
+                            <!--
+                            <div class="uk-overlay uk-position-center uk-light">
+                                <p class="alte-bold uk-h1">Bumble</p>
+                            </div>  -->
+                    </a>
                 </div>
-            </div>
-            <!--seccion de portafolio UI Designer-> Jerry's Artarama Art supplie (Figma, Web app prototype)-->
-            <div>
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-media-top uk-animation-fade">
-                        <img src="./img/ux.png" alt="">
-                    </div>
-                    <div class="uk-card-body">
-                        <h3 class="uk-card-title uk-link-text"><a href="./uidesign.html" style="color: blue;" id="hi">UI Designer</a></h3>
-                        <p>Some of the projects you will find are the following: <br>
-                            -> La Nuit & Co (Landing page).
-                            <br>
-                            -> Cryptocurrency Wallet Mobile App.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <!--seccion de portafolio front-end developer-->
-            <div>
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-media-top uk-animation-fade">
-                        <img src="./img/front.png" alt="">
-                    </div>
-                    <div class="uk-card-body">
-                        <h3 class="uk-card-title uk-link-text"><a href="./portfoliofront.html" style="color: blue;" id="hi">Front-end Developer</a></h3>
-                        <p>Some of the projects you will find are the following: <br>
-                            -> SPIRIT TEA
-                            <br>
-                            -> MexIA
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <!--seccion de portafolio Content Designer-->
-            <div>
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-media-top uk-animation-fade">
-                        <img src="./img/contentdesign3.png" alt="">
-                    </div>
-                    <div class="uk-card-body">
-                        <h3 class="uk-card-title uk-link-text"><a href="./contentdesign.html" style="color: blue;" id="hi">Content Designer</a></h3>
-                        <p>Some of the projects you will find are the following: <br>
-                            -> La Nuit & Co.
-                            <br>
-                            -> Lambda Club MX.
-                        </p>
-                    </div>
+            <!--###################################################################################################-->
+                <h1 style=" text-align: center; margin-top: 2%;">UI Designer</h1>
+                <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
+                        style="background-image: url(./img/portfolio.png); margin: 50px;">
+                    <div class="uk-overlay-primary uk-position-cover uk-dark"></div>
+                    <a href="">
+                            <!--
+                            <div class="uk-overlay uk-position-center uk-light">
+                                <p class="alte-bold uk-h1">Bumble</p>
+                            </div>  -->
+                    </a>
                 </div>
             </div>
         </div>
