añadi las imagenes de cada caso de ux research y segui modificando el contenido de portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,20 +61,20 @@
           <div>
             <h1 style=" text-align: center; margin-top: 2%;">UX Researcher</h1>
             <!--bumble caso de estudio -->
-              <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
-                   style="background-image: url(./img/portfolio.png); margin: 50px;">
-                    <div class="uk-overlay-primary uk-position-cover uk-dark"></div>
-                   <a href="">
-                       <!--
-                        <div class="uk-overlay uk-position-center uk-light">
-                            <p class="alte-bold uk-h1">Bumble</p>
-                        </div>  -->
-                   </a>
-             </div>
+            <a href="./bumble.html">
+                <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
+                    style="background-image: url(./img/bumblefull.png); margin: 50px; ">
+                    
+                        <!--
+                            <img src="./img/bumblefull.png" alt="Bumble's case study" style=""/>
+                            <div class="uk-overlay uk-position-center uk-light">
+                                <p class="alte-bold uk-h1">Bumble</p>
+                            </div>  -->
+                </div>
+            </a>
              <!-- exito-->
              <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
-                   style="background-image: url(./img/portfolio.png); margin: 50px;">
-                    <div class="uk-overlay-primary uk-position-cover uk-dark"></div>
+                   style="background-image: url(./img/exitofull.png); margin: 50px;">
                    <a href="">
                        <!--
                         <div class="uk-overlay uk-position-center uk-light">
@@ -84,8 +84,7 @@
              </div>
              <!-- falabella vs ripley-->
             <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
-             style="background-image: url(./img/portfolio.png); margin: 50px;">
-                <div class="uk-overlay-primary uk-position-cover uk-dark"></div>
+             style="background-image: url(./img/fripley2.png); margin: 50px; height: 20%;">
                 <a href="">
                     <!--
                     <div class="uk-overlay uk-position-center uk-light">
@@ -95,8 +94,7 @@
             </div>
          <!-- citizen experience-->
                 <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
-                        style="background-image: url(./img/portfolio.png); margin: 50px;">
-                    <div class="uk-overlay-primary uk-position-cover uk-dark"></div>
+                        style="background-image: url(./img/citizenfull.jpg); margin: 50px;">
                     <a href="">
                             <!--
                             <div class="uk-overlay uk-position-center uk-light">
@@ -104,6 +102,17 @@
                             </div>  -->
                     </a>
                 </div>
+            <!-- 15 usability problems-->
+            <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
+            style="background-image: url(./img/15usabcases_small.png); margin: 50px;">
+                <div class="uk-overlay-primary uk-position-cover"></div>
+                <a href="">
+                        <!--
+                        <div class="uk-overlay uk-position-center uk-light">
+                            <p class="alte-bold uk-h1">Bumble</p>
+                        </div>  -->
+                </a>
+            </div>
             <!--###################################################################################################-->
                 <h1 style=" text-align: center; margin-top: 2%;">UI Designer</h1>
                 <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
