se modifico el portafolio.html, portfolio.css y stylev2.css (se quitaron los mediaqueries en comentarios y tambien se anda modificando el estilo del footer)

--- a/portfolio.html
+++ b/portfolio.html
@@ -94,7 +94,7 @@
                 </div>
             <!-- 15 usability problems-->
             <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
-            style="background-image: url(./img/15usabcases_small.png); margin: 50px;">
+            style="background-image: url(./img/15usabcases_small.png); margin: 50px; padding-bottom: 10% !important;" id="15usab">
                 <div class="uk-overlay-primary uk-position-cover"></div>
                 <a href="">
                         <!--
@@ -103,16 +103,21 @@
                         </div>  -->
                 </a>
             </div>
-            <!--###################################################################################################-->
+            <!--###########################################################################################
                 <h1 style=" text-align: center; margin-top: 2%;">UI Designer</h1>
                 <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
                         style="background-image: url(./img/portfolio.png); margin: 50px;">
                     <div class="uk-overlay-primary uk-position-cover uk-dark"></div>
                     <a href="">
                     </a>
-                </div>
+                </div>########-->
             </div>
         </div>
+    </div>
+        <footer>
+            <h1>ayuda por favor</h1>a
+            <a href="https://www.linkedin.com/in/abrilurena/">Contact</a>
+        </footer>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.40/js/uikit.min.js"></script>
