modifique lo de portafolio y cree los archivos de cada caso de ux

--- a/portfolio.html
+++ b/portfolio.html
@@ -114,12 +114,13 @@
             </div>
         </div>
     </div>
+    <!--
         <footer>
-            <h1>ayuda por favor</h1>a
+            <h1>ayuda por favor</h1>
             <a href="https://www.linkedin.com/in/abrilurena/">Contact</a>
-        </footer>
+        </footer>-->
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.40/js/uikit.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.40/js/uikit-icons.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.40/js/uikit-icons.min.js"></script>
 </html>
