se modificaron las referencias de portfolio, se añadieron las imagenes de exito y se creo el archivo exito.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,15 +33,16 @@
                                 <a class="bar-menu" href="./portfolio.html" style="text-align: center;">
                                     Portfolio
                                 </a>
-                                <div class="uk-navbar-dropdown">
+                                 <!--<div class="uk-navbar-dropdown">
                                     <ul class="uk-nav uk-navbar-dropdown-nav">
                                         <li class="uk-active">
-                                            <a href="./portfolioux.html">UX Researcher</a>
+                                            <a href="./portfolio.html">UX Researcher</a>
                                         </li>
-                                        <li class="uk-nav-divider"></li>
+                                       <li class="uk-nav-divider"></li>
                                         <li class="uk-active">
                                             <a href="./uidesign.html">UI Designer</a>
                                         </li>
+                                        
                                         <li class="uk-nav-divider"></li>
                                         <li class="uk-active">
                                             <a href="./contentdesign.html">Content Designer</a>
@@ -51,7 +52,7 @@
                                             <a href="./portfoliofront.html">Front-end Developer</a>
                                         </li>
                                     </ul>
-                                </div>
+                                </div>-->
                               </li>
                           </ul>
                   </div>
@@ -67,42 +68,34 @@
                 </div>
             </a>
              <!-- exito-->
-             <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
+             <a href="./exito.html">
+                 <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
                    style="background-image: url(./img/exitofull.png); margin: 50px;">
-                   <a href="">
-                       <!--
-                        <div class="uk-overlay uk-position-center uk-light">
-                            <p class="alte-bold uk-h1">Bumble</p>
-                        </div>  -->
-                   </a>
-             </div>
-             <!-- falabella vs ripley-->
-            <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
-             style="background-image: url(./img/fripley2.png); margin: 50px; height: 20%;">
-                <a href="">
-                    <!--
+                 </div>
+            </a>
+            <!--
                     <div class="uk-overlay uk-position-center uk-light">
                         <p class="alte-bold uk-h1">Bumble</p>
                     </div>  -->
-                </a>
-            </div>
-         <!-- citizen experience-->
+             <!-- falabella vs ripley-->
+             <a href="./fripley.html">
                 <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
-                        style="background-image: url(./img/citizenfull.jpg); margin: 50px;">
-                    <a href="">
-                    </a>
+                style="background-image: url(./img/fripley2.png); margin: 50px; height: 20%;">
+               </div>
+            </a>
+         <!-- citizen experience-->
+            <a href="./citizen.html">
+                <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
+                style="background-image: url(./img/citizenfull.jpg); margin: 50px;">
                 </div>
+            </a>
             <!-- 15 usability problems-->
-            <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
-            style="background-image: url(./img/15usabcases_small.png); margin: 50px; padding-bottom: 10% !important;" id="15usab">
-                <div class="uk-overlay-primary uk-position-cover"></div>
-                <a href="">
-                        <!--
-                        <div class="uk-overlay uk-position-center uk-light">
-                            <p class="alte-bold uk-h1">Bumble</p>
-                        </div>  -->
-                </a>
-            </div>
+            <a href="./15usability.html" style="margin-bottom: 50px;">
+                <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
+                style="background-image: url(./img/15usabcases_small.png); margin: 50px; padding-bottom: 10% !important;" id="15usab">
+                    <div class="uk-overlay-primary uk-position-cover"></div>
+                </div>
+            </a>
             <!--###########################################################################################
                 <h1 style=" text-align: center; margin-top: 2%;">UI Designer</h1>
                 <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
