modifique exito.html y exito.css

--- a/exito.html
+++ b/exito.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.40/css/uikit.min.css">
-    <link rel="stylesheet" href="css/portfolio.css">
+    <link rel="stylesheet" href="./css/exito.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="icon" href="img/littlebu.png">
-    <title>Abril Ureña: Portafolio</title>
+    <title>Éxito - Case Study</title>
   </head>
   <body id="body">
     <div class="uk-section-default uk-background-blend-darken welcome uk-background-fixed uk-background-cover " id="Inicio">
@@ -33,79 +33,54 @@
                                 <a class="bar-menu" href="./portfolio.html" style="text-align: center;">
                                     Portfolio
                                 </a>
-                                <div class="uk-navbar-dropdown">
-                                    <ul class="uk-nav uk-navbar-dropdown-nav">
-                                        <li class="uk-active">
-                                            <a href="./portfolioux.html">UX Researcher</a>
-                                        </li>
-                                        <li class="uk-nav-divider"></li>
-                                        <li class="uk-active">
-                                            <a href="./uidesign.html">UI Designer</a>
-                                        </li>
-                                        <li class="uk-nav-divider"></li>
-                                        <li class="uk-active">
-                                            <a href="./contentdesign.html">Content Designer</a>
-                                        </li>
-                                        <li class="uk-nav-divider"></li>
-                                        <li class="uk-active">
-                                            <a href="./portfoliofront.html">Front-end Developer</a>
-                                        </li>
-                                    </ul>
-                                </div>
                               </li>
                           </ul>
                   </div>
             </nav>
         </div>
-        <div class="uk-child-width-1-1@s" uk-grid>
-          <div>
-            <h1 style=" text-align: center; margin-top: 2%;">UX Researcher</h1>
-            <!--bumble caso de estudio -->
-            <a href="./bumble.html">
-                <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
-                    style="background-image: url(./img/bumblefull.png); margin: 50px; ">
-                </div>
-            </a>
-             <!-- exito-->
-             <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
-                   style="background-image: url(./img/exitofull.png); margin: 50px;">
-                   <a href="./exito.html">
-                       <!--
-                        <div class="uk-overlay uk-position-center uk-light">
-                            <p class="alte-bold uk-h1">Bumble</p>
-                        </div>  -->
-                   </a>
-             </div>
-             <!-- falabella vs ripley-->
-            <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
-             style="background-image: url(./img/fripley2.png); margin: 50px; height: 20%;">
-                <a href="./fripley.html">
-                    <!--
-                    <div class="uk-overlay uk-position-center uk-light">
-                        <p class="alte-bold uk-h1">Bumble</p>
-                    </div>  -->
-                </a>
-            </div>
-         <!-- citizen experience-->
-                <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
-                        style="background-image: url(./img/citizenfull.jpg); margin: 50px;">
-                    <a href="./citizen.html">
-                    </a>
-                </div>
-            <!-- 15 usability problems-->
-            <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
-            style="background-image: url(./img/15usabcases_small.png); margin: 50px; padding-bottom: 10% !important;" id="15usab">
-                <div class="uk-overlay-primary uk-position-cover"></div>
-                <a href="./15usability.html">
-                        <!--
-                        <div class="uk-overlay uk-position-center uk-light">
-                            <p class="alte-bold uk-h1">Bumble</p>
-                        </div>  -->
-                </a>
-            </div>
+        <div class="uk-child-width-1-1@s uk-animation-fade" uk-grid>
+            <div style="margin-top: 3% !important;">
+                <h3>Expert Evaluation of the Largest retail platform in South America</h3>
+                <h1>Éxito</h1>
+                <!--bumble caso de estudio -->
             </div>
         </div>
-    </div>
+        <section class="au-screenshot">
+            <div class="au-screenshot-preview -lg uk-animation-scale-up">
+                <img src="./img/exito/exitocover.png" alt="exito's logo" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
+            </div>
+        </section>
+        <section class="au-brief">
+            <div>
+                
+            </div>
+        </section>
+        <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
+            <div>
+                <div class="uk-card uk-card-body uk-card-small">
+                    <h3 class="uk-card-title" style="font-weight: bold;">Project Overview</h3>
+                </div>
+            </div>
+            <div class="uk-card uk-card-body" id="columna-d"> <!-- uk-card-hover-->
+                    <p>Éxito is the largest leading retail platform in South America, with presence in Colombia and in Uruguay with Grupo Disco and Grupo Devoto. It is also present in Argentina with Libertad and Paseo.</p>
+                    <p>Project duration: 1 week.</p>
+                    <p>The aim of this study was to recognize and demonstrate the usability problems of one of Colombia's largest online stores.</p>
+                    <p>Team: 5 UX Researchers</p>
+                    <p>My role:  UX Researcher</p>
+                    <p>Responsibilities: </p>
+                    <ul>
+                        <li>Expert Evaluator</li>
+                        <li>Design Research</li>
+                        <li>Content Creator</li>
+                    </ul>
+                    <p>Challenges: </p>
+                    <ul>
+                        <li>Collaboration and adaptation for reporting results.</li>
+                        <!--
+                        <li>Find theoretical references to support the findings of the inspection.</li>-->
+                    </ul>
+            </div>
+        </div>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.40/js/uikit.min.js"></script>
