se sigue modificando exito.html, exito.css y añadi una imagen r2

--- a/exito.html
+++ b/exito.html
@@ -39,20 +39,15 @@
             </nav>
         </div>
         <div class="uk-child-width-1-1@s uk-animation-fade" uk-grid>
-            <div style="margin-top: 3% !important;">
+            <div style="margin-top: 4% !important;">
                 <h3>Expert Evaluation of the Largest retail platform in South America</h3>
-                <h1>Éxito</h1>
+                <h2>Éxito</h2>
                 <!--bumble caso de estudio -->
             </div>
         </div>
         <section class="au-screenshot">
             <div class="au-screenshot-preview -lg uk-animation-scale-up">
                 <img src="./img/exito/exitocover.png" alt="exito's logo" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
-            </div>
-        </section>
-        <section class="au-brief">
-            <div>
-                
             </div>
         </section>
         <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
@@ -79,6 +74,34 @@
                         <!--
                         <li>Find theoretical references to support the findings of the inspection.</li>-->
                     </ul>
+                    <div class="au-report">
+                        <a class="au-report-link" href="https://www.linkedin.com/posts/victor-m-gonzalez_exito-evaluaci%C3%B3n-experta-labw-sperientia-activity-6766741401226010624-X0aM" target="_blank" rel="noopener" data-magnetic>
+                            <span data-text="Launch project">Full report (spanish)</span>
+                        </a>
+                    </div>
+            </div>
+        </div>
+        <div class="uk-child-width-1-1@s" uk-grid>
+            <div style="margin-top: 3% !important;">
+                <h1>Methodology</h1>
+            </div>
+        </div>
+        <section class="au-screenshot">
+            <div class="au-screenshot-preview -lg uk-animation-fade">
+                <img src="./img/exito/r2.jpg" alt="people's seeing a presentation" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
+            </div>
+        </section>
+        <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
+            <div>
+                <div class="uk-card uk-card-body uk-card-small">
+                    <h3 class="uk-card-title" style="font-weight: bold;">Research</h3>
+                </div>
+            </div>
+            <div class="uk-card uk-card-body" id="columna-d"> <!-- uk-card-hover-->
+                <h2>Understanding the company and it's audience</h2>
+                    <p>The following question guided my use of Éxito website during the day I spent:</p>
+                    <p>"What would a user want to achieve with a website like this?"</p>
+                    <p>Upon doing this research, I analyzed Éxito's competition and also identified the company's value proposition.</p>
             </div>
         </div>
   </body>
