se modifico exito.html

--- a/exito.html
+++ b/exito.html
@@ -98,7 +98,25 @@
                 </div>
             </div>
             <div class="uk-card uk-card-body" id="columna-d"> <!-- uk-card-hover-->
-                <h2>Understanding the company and it's audience</h2>
+                <h2 style="padding: 0 1% !important;">Understanding the company and it's audience</h2>
+                    <p>The following question guided my use of Éxito website during the day I spent:</p>
+                    <p>"What would a user want to achieve with a website like this?"</p>
+                    <p>Upon doing this research, I analyzed Éxito's competition and also identified the company's value proposition.</p>
+            </div>
+        </div>
+        <section class="au-screenshot">
+            <div class="au-screenshot-preview -lg uk-animation-fade">
+                <img src="./img/exito/userflow.jpg" alt="people painting a white board with markers" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
+            </div>
+        </section>
+        <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
+            <div>
+                <div class="uk-card uk-card-body uk-card-small">
+                    <h3 class="uk-card-title" style="font-weight: bold;">Research</h3>
+                </div>
+            </div>
+            <div class="uk-card uk-card-body" id="columna-d"> <!-- uk-card-hover-->
+                <h2 style="padding: 0 1% !important;">Understanding the company and it's audience</h2>
                     <p>The following question guided my use of Éxito website during the day I spent:</p>
                     <p>"What would a user want to achieve with a website like this?"</p>
                     <p>Upon doing this research, I analyzed Éxito's competition and also identified the company's value proposition.</p>
