exito.html se modifico, ultimos detalles

--- a/exito.html
+++ b/exito.html
@@ -116,10 +116,73 @@
                 </div>
             </div>
             <div class="uk-card uk-card-body" id="columna-d"> <!-- uk-card-hover-->
-                <h2 style="padding: 0 1% !important;">Understanding the company and it's audience</h2>
-                    <p>The following question guided my use of Éxito website during the day I spent:</p>
-                    <p>"What would a user want to achieve with a website like this?"</p>
-                    <p>Upon doing this research, I analyzed Éxito's competition and also identified the company's value proposition.</p>
+                <h2 style="padding: 0 1% !important;">User's flow</h2>
+                <p>We used the book Usability Engineering by Jakob Nielsen as a guide to carry out this expert evaluation. The evaluators examined each page individually in order to gain a better understanding of the overall flow and scope of the system.</p>
+                <p>After understanding the user flow, we created tasks that focused on the possible uses of the platform in the daily lives of its users.</p>
+                <p>Tasks:
+                    <ol>
+                        <li>Create a list of products</li>
+                        <li>Product search</li>
+                        <li>Search for a discounted product and shipping information for that item.</li>
+                    </ol></p>
+            </div>
+        </div>
+        <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
+            <div>
+                <div class="uk-card uk-card-body uk-card-small">
+                    <h3 class="uk-card-title" style="font-weight: bold;">Research</h3>
+                </div>
+            </div>
+            <div class="uk-card uk-card-body" id="columna-d"> <!-- uk-card-hover-->
+                <h2 style="padding: 0 1% !important;">Analyzing results</h2>
+                <p>All the researchers met after these tasks were completed to determine which findings were most relevant.</p>
+                <p>My analysis was based on usability fundamentals and heuristics, so that I could provide an explanation that was not based solely on assumptions. Rather, it was based on previous research conducted by user experience experts.</p>
+            </div>
+        </div>
+        <section class="au-screenshot">
+            <div class="au-screenshot-preview -lg uk-animation-fade">
+                <img src="./img/exito/together.jpg" alt="people sitting together" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
+            </div>
+        </section>
+        <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
+            <div>
+                <div class="uk-card uk-card-body uk-card-small">
+                    <h3 class="uk-card-title" style="font-weight: bold;">Main findings</h3>
+                </div>
+            </div>
+            <div class="uk-card uk-card-body" id="columna-d"> <!-- uk-card-hover-->
+                <h2 style="padding: 0 1% !important;">User's flow</h2>
+                <p>Finally, based on the information collected, we carried out an analysis through a grouping and identification of patterns, complemented by a series of discussions that allowed us to make sense of the different findings.</p>
+                <h3>Results</h3>
+                <p>
+                  The usability problems could be recognized in the following screens: home page, product search and selection, and payment, which show that the interface lacks some basics of user-centered design. This may affect the way in which users perform their tasks and the fulfillment of their objectives within the online store.
+                </p>
+            </div>
+        </div>
+        <section class="au-screenshot">
+            <div class="au-screenshot-preview -lg uk-animation-fade">
+                <img src="./img/exito/learn.jpg" alt="inspirational quote: go up and never stop" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
+            </div>
+        </section>
+        <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
+            <div>
+                <div class="uk-card uk-card-body uk-card-small">
+                    <h3 class="uk-card-title" style="font-weight: bold;">Looking foward</h3>
+                </div>
+            </div>
+            <div class="uk-card uk-card-body" id="columna-d"> <!-- uk-card-hover-->
+                <h2 style="padding: 0 1% !important;">Takeaways</h2>
+                <h4>Impact</h4>
+                <p>These problems could cause the image of the company or its website to be affected by the user's experience during their stay on the website.</p>
+                <h4>I learned to:</h4>
+                <p> 
+                    <ul>
+                        <li>Do an expert evaluation</li>
+                        <!--
+                        <li>Value and respect the ideas of the members of a team and work together as a team.</li>-->
+                        <li>Develop detailed reports based on scientific research and learned from people who were internationally recognized as UX designers</li>
+                    </ul>
+                </p>
             </div>
         </div>
   </body>
