--- a/exito.html
+++ b/exito.html
@@ -127,14 +127,13 @@
                     </ol></p>
             </div>
         </div>
-        <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
+        <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 2%;" uk-grid>
             <div>
                 <div class="uk-card uk-card-body uk-card-small">
-                    <h3 class="uk-card-title" style="font-weight: bold;">Research</h3>
                 </div>
             </div>
-            <div class="uk-card uk-card-body" id="columna-d"> <!-- uk-card-hover-->
-                <h2 style="padding: 0 1% !important;">Analyzing results</h2>
+            <div class="uk-card uk-card-body" id="columna-d" style="margin-left: 4% !important;"> <!-- uk-card-hover-->
+                <h1 style="padding: 0 1% !important; margin-bottom: 1%;">Analyzing results</h1>
                 <p>All the researchers met after these tasks were completed to determine which findings were most relevant.</p>
                 <p>My analysis was based on usability fundamentals and heuristics, so that I could provide an explanation that was not based solely on assumptions. Rather, it was based on previous research conducted by user experience experts.</p>
             </div>
@@ -147,13 +146,13 @@
         <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
             <div>
                 <div class="uk-card uk-card-body uk-card-small">
-                    <h3 class="uk-card-title" style="font-weight: bold;">Main findings</h3>
                 </div>
             </div>
-            <div class="uk-card uk-card-body" id="columna-d"> <!-- uk-card-hover-->
-                <h2 style="padding: 0 1% !important;">User's flow</h2>
-                <p>Finally, based on the information collected, we carried out an analysis through a grouping and identification of patterns, complemented by a series of discussions that allowed us to make sense of the different findings.</p>
-                <h3>Results</h3>
+            <div class="uk-card uk-card-body" id="columna-d" style="margin-left: 4% !important;"> <!-- uk-card-hover-->
+                <h1 style="padding: 0 1% !important;  margin-bottom: 1%;">Main Findings</h1>
+                <p>Finally, based on the information collected, we carried out an analysis through a grouping and identification of patterns, complemented by a series of discussions that allowed us to make sense of the different findings.                
+                </p>
+                <h1 style=" margin-bottom: 1%; margin-left: -9% !important;">Results</h1>
                 <p>
                   The usability problems could be recognized in the following screens: home page, product search and selection, and payment, which show that the interface lacks some basics of user-centered design. This may affect the way in which users perform their tasks and the fulfillment of their objectives within the online store.
                 </p>
@@ -161,7 +160,7 @@
         </div>
         <section class="au-screenshot">
             <div class="au-screenshot-preview -lg uk-animation-fade">
-                <img src="./img/exito/learn.jpg" alt="inspirational quote: go up and never stop" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
+                <img src="./img/exito/learn.jpg" alt="inspirational quote: go up and never" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
             </div>
         </section>
         <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
@@ -171,10 +170,10 @@
                 </div>
             </div>
             <div class="uk-card uk-card-body" id="columna-d"> <!-- uk-card-hover-->
-                <h2 style="padding: 0 1% !important;">Takeaways</h2>
-                <h4>Impact</h4>
+                <h1 style="padding: 0 1% !important; margin-bottom: 1%;">Takeaways</h1>
+                <h2 style="margin-left: -9% !important;">Impact</h2>
                 <p>These problems could cause the image of the company or its website to be affected by the user's experience during their stay on the website.</p>
-                <h4>I learned to:</h4>
+                <h2 style="margin-left: -9% !important;">I learned to:</h2>
                 <p> 
                     <ul>
                         <li>Do an expert evaluation</li>
@@ -183,6 +182,11 @@
                         <li>Develop detailed reports based on scientific research and learned from people who were internationally recognized as UX designers</li>
                     </ul>
                 </p>
+                <div class="au-report">
+                    <a class="au-report-link" href="./fripley.html" target="_blank" rel="noopener" data-magnetic>
+                        <span data-text="Launch project">Next Case: Falabella vs Ripley</span>
+                    </a>
+                </div>
             </div>
         </div>
   </body>
