añadi fotos de citizen experience, fripley, 15usab, entre otros casos de estudios + modificque bumble.html + exito.css

--- a/bumble.html
+++ b/bumble.html
@@ -122,7 +122,7 @@
             <div class="uk-card uk-card-body" id="columna-d"> <!-- uk-card-hover-->
                 <h2 style="padding: 0 1% !important;">User’s profile</h2>
                 <p>The research for this project was based on books by renowned authors in the field of UX Design, which enabled us to define the objectives and describe the profiles of the users who attended the study.</p>
-                <h4>User A</h4>
+                <h3 style="margin-left: -9% !important; margin-bottom: -1%; font-weight: bold;">User A</h3>
                 <p>
                     <ul>
                         <li>Single people</li>
@@ -131,7 +131,7 @@
                         <li>Have a Bumble’s paid subscription. </li></li>
                     </ul>
                 </p>
-                <h4>User B</h4>
+                <h3 style="margin-left: -9% !important; margin-bottom: -1%; margin-top: -2%; font-weight: bold;">User B</h3>
                 <p>
                     <ul>
                         <li>Single people</li>
@@ -140,7 +140,7 @@
                         <li>Have a Bumble’s free subscription. </li></li>
                     </ul>
                 </p>
-                <h3>Recruitment of people</h3>
+                <h2 style="margin-left: -9.5% !important;">Recruitment</h2>
                 <p>My plan to gain the required number of participants was to create banners and videos and share them across different social networks, and we also shared the exact amount of money to be received for completing the test.</p>
                 <p>That post contained a link to a screener survey that filtered people based on certain characteristics.</p>
             </div>
